# gusto-eats

./: .dockerignore
.github/workflows/: backend-build-and-push.yaml  frontend-build-and-push.yml  reload-server.yaml
backend/: Dockerfile  main.py  pyproject.toml
backend/core/: config.py
nginx/: default.conf
